# remember

./: .flake8  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
remember/: __main__.py
remember/core/: domain.py  exceptions.py
remember/domain/: model.py
src/remember/: __main__.py  config.py
src/remember/adapters/: repository.py
src/remember/core/: domain.py  exceptions.py  handlers.py  repository.py  unit_of_work.py
src/remember/core/ports/: file_repository.py  file_unit_of_work.py
src/remember/domain/: exceptions.py  model.py
src/remember/services/: unit_of_work.py
src/remember/services/handlers/: command.py  query.py
