[tool.poetry]
name = "remember"
version = "0.1.0"
description = ""
authors = ["Gabriel Fonseca <fonsecacrz7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
